--- a/KPI.UI/index.html
+++ b/KPI.UI/index.html
@@ -11,11 +11,15 @@
 		<script src="js/modelDataProcessor.js"></script>
 		<script src="js/GraphicPainter.js"></script>
 		<script type="text/javascript">
-			$("#EfficiencyGraph").ready(getDataByProject);
+			$("body").ready(generateGraph);
 		</script>
 	</head>
 	<body>
-		<div id="EfficiencyGraph" style="min-width: 310px; height: 400px; margin: 0 auto"></div>
-		<div id="ReprocessedEfficiencyGraph" style="min-width: 310px; height: 400px; margin: 0 auto"></div>
+		<div id="EffectivenessGraph1" style="min-width: 310px; height: 400px; margin: 0 auto"></div>
+		<div id="ReprocessedEfficiencyGraph1" style="min-width: 310px; height: 400px; margin: 0 auto"></div>
+		<div id="EffectivenessGraph2" style="min-width: 310px; height: 400px; margin: 0 auto"></div>
+		<div id="ReprocessedEfficiencyGraph2" style="min-width: 310px; height: 400px; margin: 0 auto"></div>
+		<div id="EffectivenessGraph3" style="min-width: 310px; height: 400px; margin: 0 auto"></div>
+		<div id="ReprocessedEfficiencyGraph3" style="min-width: 310px; height: 400px; margin: 0 auto"></div>
 	</body>
 </html>
