--- a/KPI.UI/ProjectChart1.html
+++ b/KPI.UI/ProjectChart1.html
@@ -154,15 +154,13 @@
 		}
 		$("body").ready(function(){
 			var project = convertProjectToJSON();
-			processProject(project, 'EffectivenessGraph','ReprocessedEfficiencyGraph');
+			generateByProject(project);
 		});
 		</script>
 	</head>
 	<body>
-		
+		<h1 style="text-align:center">Graficas del proyecto COLMEDICA - Cuentas Médicas</h1>
 		<div id="EffectivenessGraph" style="min-width: 310px; height: 400px; margin: 0 auto"></div>
-		
 		<div id="ReprocessedEfficiencyGraph" style="min-width: 310px; height: 400px; margin: 0 auto"></div>
-		
 	</body>
 </html>
