--- a/KPI.UI/index.html
+++ b/KPI.UI/index.html
@@ -15,14 +15,14 @@
 		</script>
 	</head>
 	<body>
-		<div id="EffectivenessGraph1" style="min-width: 310px; height: 400px; margin: 0 auto"></div>
-		s
-		<div id="ReprocessedEfficiencyGraph1" style="min-width: 310px; height: 400px; margin: 0 auto"></div>
-		<div id="EffectivenessGraph2" style="min-width: 310px; height: 400px; margin: 0 auto"></div>
-		s
-		<div id="ReprocessedEfficiencyGraph2" style="min-width: 310px; height: 400px; margin: 0 auto"></div>
-		<div id="EffectivenessGraph3" style="min-width: 310px; height: 400px; margin: 0 auto"></div>
-		s
-		<div id="ReprocessedEfficiencyGraph3" style="min-width: 310px; height: 400px; margin: 0 auto"></div>
+			<a href="ProjectChart1.html"><h1 style="text-align:center">Graficas del proyecto COLMEDICA - Cuentas Médicas</h1></a>
+			<div id="EffectivenessGraph1" style="min-width: 310px; height: 400px; margin: 0 auto"></div>
+			<div id="ReprocessedEfficiencyGraph1" style="min-width: 310px; height: 400px; margin: 0 auto"></div>
+			<a href="ProjectChart2.html"><h1 style="text-align:center">Graficas del proyecto ICFES</h1></a>
+			<div id="EffectivenessGraph2" style="min-width: 310px; height: 400px; margin: 0 auto"></div>
+			<div id="ReprocessedEfficiencyGraph2" style="min-width: 310px; height: 400px; margin: 0 auto"></div>
+			<a href="ProjectChart3.html"><h1 style="text-align:center">Graficas del proyecto PORVENIR</h1></a>
+			<div id="EffectivenessGraph3" style="min-width: 310px; height: 400px; margin: 0 auto"></div>
+			<div id="ReprocessedEfficiencyGraph3" style="min-width: 310px; height: 400px; margin: 0 auto"></div>
 	</body>
 </html>
